Completed All sections

--- a/index.html
+++ b/index.html
@@ -38,5 +38,142 @@
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
+    <!-- header -->
+    <header id="showcase">
+      <div class="showcase">
+        <h1 class="l-heading">Accountable For Your Success</h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+          dolore doloribus nostrum praesentium odio modi.
+        </p>
+        <a href="#Services" class="btn">Read More</a>
+      </div>
+    </header>
+    <!-- Services section -->
+    <section id="services" class="bg-light py-1">
+      <div class="container">
+        <h2 class="m-heading text-center">
+          <span class="text-primary">Services </span>We Provide
+        </h2>
+        <div class="items">
+          <div class="item">
+            <i class="fas fa-university fa-2x"></i>
+            <h3>Investment Banking</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              molestias.
+            </p>
+          </div>
+          <div class="item">
+            <i class="fas fa-book-reader fa-2x"></i>
+            <h3>Portfolio Management</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              molestias.
+            </p>
+          </div>
+          <div class="item">
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <h3>Tax & Custodial</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+              molestias.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About -->
+    <section id="about">
+      <div class="about-img"></div>
+      <div class="about-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">About</span> Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem
+          mollitia, culpa obcaecati veniam eius explicabo corporis repellat eos
+          sequi.
+        </p>
+        <h3>Our Team</h3>
+        <ul class="list">
+          <li>M Saleem: CEO</li>
+          <li>Javed Akram: CFO</li>
+          <li>Maryam Khalid: Lead Accountant</li>
+          <li>Talha Mehmood: Investment Manager</li>
+          <li>Sheeza Naeem: Senior Accountant</li>
+        </ul>
+      </div>
+    </section>
+    <!-- clients section -->
+    <section id="clients" class="py-1">
+      <div class="container">
+        <h2 class="m-heading text-center">
+          <span class="text-primary">Our</span> Clients
+        </h2>
+        <div class="items py-1">
+          <div><img src="./img/logo2.png" alt="Client1" /></div>
+          <div><img src="./img/logo3.png" alt="Client1" /></div>
+          <div><img src="./img/logo4.png" alt="Client1" /></div>
+          <div><img src="./img/logo5.png" alt="Client1" /></div>
+          <div><img src="./img/logo6.png" alt="Client1" /></div>
+        </div>
+      </div>
+    </section>
+    <!-- Contact Section -->
+    <section id="contact">
+      <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Contact Us</h2>
+        <p>Please use this form to contact us</p>
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter Name" />
+          </div>
+          <div class="form-group">
+            <label for="Email">Email</label>
+            <input
+              type="Email"
+              name="Email"
+              id="Email"
+              placeholder="Enter Enter"
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input
+              type="tel"
+              name="phone"
+              id="phone"
+              placeholder="Enter Phone Number"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              type="message"
+              name="message"
+              id="message"
+              placeholder="Enter Your Message"
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <input type="submit" value="Send" class="btn-dark" />
+          </div>
+        </form>
+      </div>
+      <div class="map"></div>
+    </section>
+    <div class="clr"></div>
+    <!-- footer -->
+    <footer id="main-footer" class="bg-dark text-center py-1">
+      <div class="container">
+        <p>Copyright &copy;2019 Fiscal Ledger, All Rights Reserved</p>
+      </div>
+    </footer>
+
+    <script src="/javascript/main.js"></script>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0jtGiIVYvhENYJTpsPlDuGNwl2CJzaIY&callback=initMap"
+    ></script>
   </body>
 </html>
