--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         >Ledger
       </h1>
       <ul>
-        <li><a href="#Home">Home</a></li>
-        <li><a href="#Services">Services</a></li>
-        <li><a href="#About">About</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#showcase">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <!-- header -->
@@ -46,7 +46,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
           dolore doloribus nostrum praesentium odio modi.
         </p>
-        <a href="#Services" class="btn">Read More</a>
+        <a href="#services" class="btn">Read More</a>
       </div>
     </header>
     <!-- Services section -->
@@ -169,8 +169,15 @@
         <p>Copyright &copy;2019 Fiscal Ledger, All Rights Reserved</p>
       </div>
     </footer>
-
+    <!-- JS for JQuery CDN -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Local JS File -->
     <script src="/javascript/main.js"></script>
+    <!-- JS for Google Map API -->
     <script
       async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0jtGiIVYvhENYJTpsPlDuGNwl2CJzaIY&callback=initMap"
