--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width:768px)"
@@ -20,7 +21,6 @@
       media="screen and (min-width:1100px)"
       href="stylesheets/wide.css"
     />
-    <link rel="stylesheet" href="stylesheets/style.css" />
 
     <title>Fiscal Ledger | Financial and Accounting Management</title>
   </head>
@@ -58,27 +58,33 @@
         <div class="items">
           <div class="item">
             <i class="fas fa-university fa-2x"></i>
-            <h3>Investment Banking</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
-              molestias.
-            </p>
+            <div>
+              <h3>Investment Banking</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+                molestias.
+              </p>
+            </div>
           </div>
           <div class="item">
             <i class="fas fa-book-reader fa-2x"></i>
-            <h3>Portfolio Management</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
-              molestias.
-            </p>
+            <div>
+              <h3>Portfolio Management</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+                molestias.
+              </p>
+            </div>
           </div>
           <div class="item">
             <i class="fas fa-pencil-alt fa-2x"></i>
-            <h3>Tax & Custodial</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
-              molestias.
-            </p>
+            <div>
+              <h3>Tax & Custodial</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta,
+                molestias.
+              </p>
+            </div>
           </div>
         </div>
       </div>
